@@ -1,5 +1,6 @@
 2009-06-21  Glenn Morris  <rgm@gnu.org>
 
+	* emacs-lisp/lisp-mode.el (lisp-indent-function)
 	* emacs-lisp/cl-indent.el (lisp-indent-defun-method)
 	(common-lisp-indent-function): Add doc strings.
 
